# OpenCLTest

./: CMakeLists.txt  README.md
Classes/: main.cpp
